--- a/index-style.css
+++ b/index-style.css
@@ -30,6 +30,24 @@ body {
 	text-align: center;
 }
 
+.box {
+	text-align: center;
+	border-width: 2px;
+	border-style: solid;
+	padding-top: 5px;
+	padding-bottom: 5px;
+	width: 50%;
+	margin-left: 25%;
+}
+
+.margin-top-75 {
+	margin-top: 75px;
+}
+
+.margin-top-100 {
+	margin-top: 100px;
+}
+
 .nav-bar {
 	width: 100%;
 	height: 50px;
@@ -54,7 +72,7 @@ body {
 	letter-spacing: 1px;
 	text-decoration: none;
 	opacity: 1;
-		position: relative;
+	position: relative;
 }
 
 .nav-bar .element {
@@ -68,7 +86,7 @@ body {
 	font-weight: bold;
 	text-decoration: none;
 	opacity: 1;
-		position: relative;
+	position: relative;
 }
 
 .nav-bar .element:hover {
@@ -104,10 +122,13 @@ body {
 }
 
 .nav-bottom {
-	width: 125px;
-    margin-left: auto;
-    margin-right: auto;
-	margin-bottom: 10px; 
+	width: 20%;
+	height: 50px;
+    margin-left: 40%;
+    /*margin-right: auto;
+*/	margin-bottom: 10px; 
+	margin-top: 100px; 
+	text-align: center;
 }
 
 .item {
@@ -130,25 +151,6 @@ body {
 	color: white;
 }
 
-a {
-	text-decoration: none;
-	color: white;
-	font-family: Arial;
-}
-
-a.resume {
-	width: 10%;
-	text-align: center;
-	display: inline-block;
-	color: white;
-	background: black;
-	padding-top: 10px;
-	padding-bottom: 10px;
-	margin-top: 10px;
-	margin-bottom: 10px;
-	margin-left: 45%;
-}
-
 .resume {
 	width: 10%;
 	text-align: center;
@@ -160,24 +162,36 @@ a.resume {
 	margin-top: 10px;
 	margin-bottom: 10px;
 	margin-left: 45%;
+	border-color: black;
+	border-width: 1px;
+	border-style: solid;
+	cursor: pointer;
+	transition: all 300ms ease-in-out 0s;
 }
 
-a.icon {
-	margin-right: 20px;
-	/*margin-right: auto;*/
-	text-align: center;
-	display: inline-block;
-	/*margin: 0;*/
-}
-
-a.resume:hover {
-	font-weight: 600;
+.resume:hover {
+	border-color: #eeeeee;
+	border-width: 1px;
+	border-style: solid;
+	transition: all 300ms ease-in-out 0s;
 }
 
 .icon {
 	width: 40px;
 	height: 40px;
+	margin-top: 5px;
+	margin-bottom: 5px;
+	cursor: pointer;
 	/*margin: 0;*/
+	transition: all 300ms ease-in-out 0s;
+}
+
+.icon:hover {
+	width: 50px;
+	height: 50px;
+	margin-top: 0px;
+	margin-bottom: 0px;
+	transition: all 300ms ease-in-out 0s;
 }
 
 .list-content {
@@ -187,4 +201,17 @@ a.resume:hover {
 
 .list-subcontent {
 	margin-left: 20px;
+}
+
+.link:hover {
+	opacity: 1;
+	border-width: 2px;
+	border-style: solid;
+}
+
+.nav-bottom .element{
+	width: 50px;
+	height: 50px;
+	text-align: center;
+	display: inline-block;
 }
