--- a/index-style.css
+++ b/index-style.css
@@ -5,12 +5,13 @@ body {
 }
 
 .profile-img {
-	height: 450px;
+	max-width:90%;
+	max-height:100%;
+	min-width: 100px;
 	border-radius: 15%;
 	display: block;
 	margin-left: auto;
     margin-right:10%;
-	position: static;
 	margin-top: 75px;
 	float: left;
 }
@@ -40,7 +41,7 @@ body {
 
 .profile-txt {
     width:60%;
-    position: relative;
+    /*position: relative;*/
     float: left;
 	margin-top: 100px;
 }
@@ -151,7 +152,7 @@ body {
 
 .item {
 	text-align: center;
-	margin-top: 100px;
+	margin-top: 150px;
 	margin-bottom: 100px;
 	color: white;
 	font-family: Arial;
@@ -282,3 +283,32 @@ a:active {
 	font-weight: normal;
 }
 
+
+.column-left {
+  float: left;
+  width: 40%;
+  /*padding: 5px;*/
+}
+
+.column-right {
+  float: left;
+  width: 60%;
+  /*padding: 5px;*/
+}
+
+/* Clear floats after image containers */
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+/* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 750px) {
+  .column-left {
+    width: 100%;
+  }
+  .column-right {
+    width: 100%;
+  }
+}
