--- a/index-style.css
+++ b/index-style.css
@@ -2,6 +2,7 @@ body {
 	margin: 0;
 	padding:0px;
 	font-family: Arial;
+	background-color: #202020;
 }
 
 .profile-img {
@@ -96,7 +97,6 @@ body {
 }
 
 .nav-bar .element {
-	/*width: 19.5%;*/
 	line-height: 50px;
 	text-align: center;
 	color: white;
@@ -144,8 +144,7 @@ body {
 	width: 20%;
 	height: 50px;
     margin-left: 40%;
-    /*margin-right: auto;
-*/	margin-bottom: 10px; 
+	margin-bottom: 10px; 
 	margin-top: 100px; 
 	text-align: center;
 }
@@ -174,12 +173,9 @@ body {
 	margin: 0;
 	color: white;
 	margin-top: 10px;
-	/*margin-bottom: 50px;*/
     display: none;
     font-size:16px;
 	font-weight: normal;
-    /*animation: 1.4s forwards hover-v linear;
-	animation-fill-mode: forwards;*/
 }
 
 p:hover .description-end {
@@ -224,7 +220,6 @@ p.description-end:hover  {
 	margin-top: 5px;
 	margin-bottom: 5px;
 	cursor: pointer;
-	/*margin: 0;*/
 	transition: all 300ms ease-in-out 0s;
 }
 
@@ -237,6 +232,7 @@ p.description-end:hover  {
 }
 
 .list-content {
+	margin-top: 60px;
 	margin-bottom: 75px;
 	margin-left: 0;
 }
@@ -259,8 +255,48 @@ p.description-end:hover  {
 }
 
 .header { 
-    font-size:24px;
+    font-size:18px;
 	font-weight: bold;
+}
+
+/*https://makitweb.com/html-how-to-show-text-above-image-on-hover/*/
+/*Parent container*/
+.caption {
+
+}
+
+/*Child container*/
+.caption div{
+	position: ;
+	bottom: 0;
+	right: 0;
+	background: black;
+	color: white;
+	margin-bottom: 5px;
+	font-family: sans-serif;
+	opacity: 0;
+	visibility: hidden;
+	-webkit-transition: visibility 0s, opacity 0.5s linear; 
+	transition: visibility 0s, opacity 0.5s linear;
+}
+
+/* Hover on Parent Container */
+.caption:hover{
+ cursor: pointer;
+}
+
+.caption:hover div{
+ width: 150px;
+ padding: 8px 15px;
+ visibility: visible;
+ opacity: 0.7; 
+}
+
+.caption:active div{
+ width: 150px;
+ padding: 8px 15px;
+ visibility: visible;
+ opacity: 0.7; 
 }
 
 a {
@@ -287,13 +323,11 @@ a:active {
 .column-left {
   float: left;
   width: 40%;
-  /*padding: 5px;*/
 }
 
 .column-right {
   float: left;
   width: 60%;
-  /*padding: 5px;*/
 }
 
 /* Clear floats after image containers */
@@ -311,4 +345,47 @@ a:active {
   .column-right {
     width: 100%;
   }
+}
+
+/* Style the tab */
+.tab {
+  float: left;
+  border: 1px solid #ccc;
+  background-color: #f1f1f1;
+  width: 100%;
+  height: 420px;
+}
+
+/* Style the buttons that are used to open the tab content */
+.tab button {
+  display: block;
+  background-color: inherit;
+  color: black;
+  padding: 22px 16px;
+  width: 100%;
+  border: none;
+  outline: none;
+  text-align: left;
+  cursor: pointer;
+}
+
+/* Change background color of buttons on hover */
+.tab button:hover {
+  background-color: #ddd;
+}
+
+/* Create an active/current "tab button" class */
+.tab button.active {
+  background-color: #ccc;
+}
+
+/* Style the tab content */
+.tabcontent {
+  float: left;
+  padding: 0px 12px;
+  border: 1px solid #ccc;
+  width: 100%;
+  border-left: none;
+  height: 420px;
+  display: none;
 }
