--- a/index-style.css
+++ b/index-style.css
@@ -27,8 +27,8 @@ body {
 }
 
 .content {
-	width: 60%;
-	margin-left: 20%;
+	width: 70%;
+	margin-left: 15%;
 	position: static;
 	color: white;
 	font-family: Arial;
@@ -147,6 +147,7 @@ body {
 	margin-bottom: 10px; 
 	margin-top: 100px; 
 	text-align: center;
+	bottom: 0;
 }
 
 .item {
@@ -232,8 +233,8 @@ p.description-end:hover  {
 }
 
 .list-content {
-	margin-top: 60px;
-	margin-bottom: 75px;
+	margin-top: 50px;
+	margin-bottom: 85px;
 	margin-left: 0;
 }
 
@@ -347,6 +348,7 @@ a:active {
   }
 }
 
+/*https://www.w3schools.com/howto/howto_js_hover_tabs.asp*/
 /* Style the tab */
 .tab {
   float: left;
@@ -383,9 +385,106 @@ a:active {
 .tabcontent {
   float: left;
   padding: 0px 12px;
-  border: 1px solid #ccc;
+  /*border: 1px solid #ccc;*/
   width: 100%;
   border-left: none;
   height: 420px;
   display: none;
+}
+
+/*https://www.w3schools.com/howto/howto_js_slideshow.asp*/
+* {box-sizing:border-box}
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+}
+
+/* Hide the images by default */
+.mySlides {
+  display: none;
+  text-align: center;
+}
+
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+
+/* Caption text */
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
+}
+
+@keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
 }
