Small fixes to CSS and links

--- a/index-style.css
+++ b/index-style.css
@@ -47,7 +47,7 @@ body {
 	margin-top: 100px;
 }
 
-.header-center {
+.center {
 	text-align: center;
 }
 
@@ -240,6 +240,13 @@ p.description-end:hover  {
 
 .list-subcontent {
 	margin-left: 30px;
+    /*background: #1c1c1c;*/
+    height: 50px;
+    left: 50%;
+    padding-bottom: 15px;
+    padding-left: 25%;
+    padding-top: 15px;
+    transition: all 0.5s;
 }
 
 .link:hover {
@@ -458,8 +465,8 @@ a:active {
 /* The dots/bullets/indicators */
 .dot {
   cursor: pointer;
-  height: 15px;
-  width: 15px;
+  height: 10px;
+  width: 10px;
   margin: 0 2px;
   background-color: #bbb;
   border-radius: 50%;
@@ -467,8 +474,9 @@ a:active {
   transition: background-color 0.6s ease;
 }
 
-.active, .dot:hover {
-  background-color: #717171;
+/*fix this*/
+.active, .dot:hover { 
+  background-color: #707070;
 }
 
 /* Fading animation */
@@ -487,4 +495,34 @@ a:active {
 @keyframes fade {
   from {opacity: .4}
   to {opacity: 1}
+}
+    
+/*from cardadfar.com*/
+#line-grey {
+    width: 54%;
+    height: 1px;
+    margin-left: 23%;
+    margin-bottom: 0px;
+    background: #515151;
+    transition: all 0.5s;
+}
+
+#side-text{
+    text-align: left;
+    font-size: 22px;
+    width: 75%;
+    float: left;
+    margin-left: 2%;
+    margin-bottom: 0px;
+    transition: all 0.5s;
+}
+
+#small-side-text{
+    text-align: left;
+    font-size: 17px;
+    float: left;
+    margin-left: 2%;
+    margin-bottom: 0px;
+    color: #9b9b9b;
+    transition: all 0.5s;
 }
