--- a/index-style.css
+++ b/index-style.css
@@ -48,7 +48,10 @@ body {
 }
 
 .center {
-	text-align: center;
+    position: static;
+    /*font-weight: lighter;*/
+    text-align: center;
+    transition: all 0.5s;
 }
 
 .box {
@@ -233,7 +236,7 @@ p.description-end:hover  {
 }
 
 .list-content {
-	margin-top: 50px;
+	/*margin-top: 50px;*/
 	margin-bottom: 85px;
 	margin-left: 0;
 }
@@ -241,11 +244,12 @@ p.description-end:hover  {
 .list-subcontent {
 	margin-left: 30px;
     /*background: #1c1c1c;*/
-    height: 50px;
+    /*height: 50px;*/
     left: 50%;
-    padding-bottom: 15px;
-    padding-left: 25%;
-    padding-top: 15px;
+    /*padding-bottom: 15px;*/
+    padding-left: 20%;
+    padding-right: 20%;
+    /*padding-top: 15px;*/
     transition: all 0.5s;
 }
 
@@ -499,9 +503,9 @@ a:active {
     
 /*from cardadfar.com*/
 #line-grey {
-    width: 54%;
+    width: 60%;
     height: 1px;
-    margin-left: 23%;
+    margin-left: 20%;
     margin-bottom: 0px;
     background: #515151;
     transition: all 0.5s;
@@ -509,9 +513,8 @@ a:active {
 
 #side-text{
     text-align: left;
-    font-size: 22px;
+    font-size: 20px;
     width: 75%;
-    float: left;
     margin-left: 2%;
     margin-bottom: 0px;
     transition: all 0.5s;
@@ -519,10 +522,18 @@ a:active {
 
 #small-side-text{
     text-align: left;
-    font-size: 17px;
-    float: left;
+    font-size: 16px;
     margin-left: 2%;
+    margin-top: 5px;
     margin-bottom: 0px;
     color: #9b9b9b;
     transition: all 0.5s;
+}
+
+.font-lighter{
+    font-weight: lighter;
+}
+
+.margin-top-40{
+	margin-top: 40px;
 }
