--- a/index-style.css
+++ b/index-style.css
@@ -196,11 +196,18 @@ p.description-end:hover  {
     transition: all 300ms ease-in-out 0s;
 }
 
-.resume:hover {
-    border-color: #eeeeee;
-    border-width: 1px;
+.small-subcontent {
+    border-color: #202020;
+    border-width: 2px;
     border-style: solid;
-    transition: all 300ms ease-in-out 0s;
+    transform: translate(0px,0px);
+    transition: all 500ms ease-in-out 0s;
+}
+
+.small-subcontent:hover {
+    border-color: #eeeeee;
+    transform: translate(10px,0px);
+    transition: all 500ms ease-in-out 0s;
 }
 
 .icon {
@@ -496,8 +503,9 @@ a:active {
     font-size: 20px;
     width: 75%;
     margin-left: 2%;
-    margin-bottom: 0px;
+    margin-bottom: 15px;
     transition: all 0.5s;
+    margin-top: 8%;
 }
 
 #small-side-text{
@@ -506,7 +514,67 @@ a:active {
     margin-left: 2%;
     margin-top: 5px;
     margin-bottom: 0px;
+    /*color: #bebebe;*/
+    color: white;
+    opacity: 1;
+    transition: all 0.5s;
+}
+
+#small-sub-text{
+    text-align: left;
+    height: 16px;
+    margin-left: 5%;
+    margin-top: 5px;
+    margin-bottom: 0px;
     color: #bebebe;
+    opacity: 1;
+    /*position: absolute;*/
+    transition: all 0.5s;
+}
+
+#small-sub-text1{
+    text-align: left;
+    font-size: 16px;
+    /*margin-left: 2%;*/
+    margin-top: 5px;
+    margin-bottom: 0px;
+    color: #bebebe;
+    opacity: 1;
+    position: absolute;
+    transform: translate(0px, 0);
+    transition: all 0.5s;
+}
+
+.small-subcontent:hover #small-sub-text1{
+    visibility: hidden;
+    opacity: 0;
+    transform: translate(-30px, 0);
+    transition: all 0.5s;
+}
+
+#small-sub-text2{
+    text-align: left;
+    font-size: 16px;
+    /*margin-left: 2%;*/
+    margin-top: 5px;
+    margin-bottom: 0px;
+    color: #bebebe;
+    opacity: 0;
+    position: absolute;
+    transform: translate(-30px, 0);
+    transition: all 0.5s;
+}
+
+#small-sub-text2{
+    visibility: hidden;
+    transition: all 0.5s;
+}
+
+.small-subcontent:hover #small-sub-text2{
+    position: absolute;
+    visibility: visible;
+    opacity: 1;
+    transform: translate(0px, 0);
     transition: all 0.5s;
 }
 
@@ -706,11 +774,20 @@ a:active {
 /**/
 .expskills {
     font-size: 13px;
-    margin-left: 2%;
+    margin-left: 5%;
     opacity: 0.9;
     display: block;
+    transform: translate(0px, 0);
+    transition: all 0.5s;
     z-index: 1;
 }
+
+.small-subcontent:hover .expskills{
+    opacity: 0;
+    transform: translate(-30px, 0);
+    transition: all 0.5s;
+}
+
 #rcorners1 {
     border-radius: 25px;
     background: #eb4d4d;
