--- a/index-style.css
+++ b/index-style.css
@@ -438,10 +438,10 @@ a:active {
   color: #f2f2f2;
   font-size: 15px;
   padding: 8px 12px;
-  position: absolute;
+  /*position: absolute;*/
   bottom: 8px;
   width: 100%;
-  text-align: center;
+  /*background-color:rgba(0, 0, 0, 0.5);*/
 }
 
 /* Number text (1/3 etc) */
