--- a/index-style.css
+++ b/index-style.css
@@ -318,6 +318,21 @@ a:active {
     font-weight: normal;
 }
 
+.row {
+  margin: 8px -16px;
+}
+
+/* Add padding BETWEEN each column (if you want) */
+.row,
+.row > .column {
+  padding: 8px;
+}
+
+/* Create four equal columns that floats next to each other */
+.column {
+  float: left;
+  width: 50%;
+}
 
 .column-left {
     float: left;
